# icse-2027

./: README.md  pyproject.toml
configs/: master_lrts_ci_drift.yaml
configs/datasets/: lrts.yaml
scripts/: inspect_lrts_schema.py  run_ci_drift_master.py  test_dataset.py
src/ci_driftlab/: __init__.py  config.py  io_utils.py  logging_utils.py
src/ci_driftlab/audit_policies/: __init__.py  audit_simulation.py
src/ci_driftlab/cost_models/: __init__.py  drift_costs.py
src/ci_driftlab/data_loading/: __init__.py  base.py  factory.py  lrts_loader.py  schema_inference.py
src/ci_driftlab/drift_detectors/: __init__.py  generic.py  hybrid.py  software_aware.py
src/ci_driftlab/features/: __init__.py  feature_extraction.py
src/ci_driftlab/label_budget/: __init__.py  label_simulation.py
src/ci_driftlab/metrics/: __init__.py  drift_metrics.py  ranking_metrics.py
src/ci_driftlab/pipeline/: __init__.py  checkpoints.py  phase1_foundation.py  phase2_drift_detection.py  phase3_label_cost_audit.py  phase4_recovery_retraining.py
src/ci_driftlab/preprocessing/: __init__.py  normalize.py  validation.py
src/ci_driftlab/retraining_policies/: __init__.py  retraining.py
src/ci_driftlab/taxonomy/: __init__.py  drift_taxonomy.py
src/ci_driftlab/tcp_baselines/: __init__.py  baselines.py  ml_models.py
src/ci_driftlab/windowing/: __init__.py  temporal_windows.py
