[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ci-driftlab"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pandas", "numpy", "PyYAML"]

[project.optional-dependencies]
analysis = ["scikit-learn", "scipy", "matplotlib", "pyarrow"]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
